--- a/css/master.css
+++ b/css/master.css
@@ -1,4 +1,6 @@
-﻿body {
+﻿@import '../css/app.css';
+@import '../bootstrap-5.1.3/dist/css/bootstrap.min.css';
+
+body {
     background-color: steelblue !important;
 }
-
